--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,9 @@
 <app-navbar></app-navbar>
 <app-primary-button></app-primary-button>
 <app-secondary-button></app-secondary-button>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-item-certificado></app-item-certificado>
+  <app-item-certificado></app-item-certificado>
+  <app-item-certificado></app-item-certificado>
+  <app-item-certificado></app-item-certificado>
+</div>
