--- a/src/app/pages/certificado-form/certificado-form.html
+++ b/src/app/pages/certificado-form/certificado-form.html
@@ -7,7 +7,11 @@
     <h2 class="card-title">Novo certificado</h2>
     <div class="mb-3 custom-input-group">
       <label for="nome" class="form-label">Nome completo</label>
-      <input id="nome" type="text" class="form-control custom-input" placeholder="Nome do aluno" >
+      <input id="nome" type="text" class="form-control custom-input" placeholder="Nome do aluno">
+      <div class="error-message d-flex align-items-center">
+        <i class="ph ph-warning-circle"></i>
+        <p class="m-0">Error menssage</p>
+      </div>
     </div>
     <div class="mb-3 d-flex align-items-end custom-input-group">
       <div class="flex-grow-1 me-2">
