--- a/src/app/_components/navbar/navbar.html
+++ b/src/app/_components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-logo">
-      <img src="navbar/logo.png" alt="logo">
+      <img src="navbar/logo.svg" alt="logo">
     </a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
@@ -14,7 +14,6 @@
           <a class="nav-link">Gerar certificados</a>
         </li>
       </ul>
-
     </div>
   </div>
 </nav>
